2009-07-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add new test to exercise error case for
	when a task is blocked on a condition variable with one mutex and
	another task attempts to block on the same condition variable with
	another mutex.
	* psxcond01/.cvsignore, psxcond01/Makefile.am, psxcond01/init.c,
	psxcond01/psxcond01.doc, psxcond01/psxcond01.scn: New files.

2009-07-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add psxspin02 to exercise case where
	trylock is unable to obtain the spinlock and that attempting to
	unlock a spinlock from a thread which did not lock it works as
	expected.
	* psxspin02/.cvsignore, psxspin02/Makefile.am, psxspin02/main.c,
	psxspin02/psxspin02.doc, psxspin02/psxspin02.scn, psxspin02/test.c:
	New files.

2009-07-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxspin01/test.c: Remove unnecessary defines.

2009-07-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psx11/init.c: Use explicit scheduler.

2009-07-17	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add test to exercise
	pthread_mutexattr_gettype and pthread_mutexattr_settype now that the
	toolset enables the feature.
	* psxmutexattr01/.cvsignore, psxmutexattr01/Makefile.am,
	psxmutexattr01/init.c, psxmutexattr01/psxmutexattr01.doc,
	psxmutexattr01/psxmutexattr01.scn: New files.

2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add test for auto initialization of
	message queues.
	* psxautoinit02/.cvsignore, psxautoinit02/Makefile.am,
	psxautoinit02/init.c, psxautoinit02/psxautoinit02.doc,
	psxautoinit02/psxautoinit02.scn: New files.

2009-07-07	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add test of pthread mutex auto
	intialization.
	* psxautoinit01/.cvsignore, psxautoinit01/Makefile.am,
	psxautoinit01/init.c, psxautoinit01/psxautoinit01.scn: New files.

2009-07-06	Joel Sherrill <joel.sherrill@OARcorp.com>
