@@ -1,5 +1,10 @@
 2009-07-21	Joel Sherrill <joel.sherrill@oarcorp.com>
 
+	* psxmutexattr01/init.c: Make test optional if tools do not support
+	posix mutex type attribute.
+
+2009-07-21	Joel Sherrill <joel.sherrill@oarcorp.com>
+
 	* Makefile.am, configure.ac: Add new test to exercise error case for
 	when a task is blocked on a condition variable with one mutex and
 	another task attempts to block on the same condition variable with
